--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -55,10 +55,10 @@
                     <tbody>
                         {% for url in urls %}
                         <tr>
-                            <td>url['id']</td>
+                            <td>{{ url['id'] }}</td>
                             <td>
                                 <a href="/urls/{{ url['id'] }}">
-                                    url['name']
+                                    {{ url['name'] }}
                                 </a>
                             </td>
 
