ref: change bootstrap & messages rendering

--- a/page_analyzer/templates/index.html
+++ b/page_analyzer/templates/index.html
@@ -24,15 +24,20 @@
             </div>
         </nav>
     </header>
-    <div class="row">
-        <div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5">
-            <h1 class="display-3">Анализатор страниц</h1>
-            <p class="lead">Бесплатно проверяйте сайты на SEO-пригодность</p>
-            <form action="/urls " method="post" class="d-flex justify-content-center" required="">
-                {% include "form.html" %}
-            </form>
+    <main class="flex-grow-1">
+        <div class="container-lg mt-3">
+            <div class="row">
+                <div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5">
+                    <h1 class="display-3">Анализатор страниц</h1>
+                    <p class="lead">Бесплатно проверяйте сайты на SEO-пригодность</p>
+                    <form action="/urls " method="post" class="d-flex justify-content-center" required="">
+                        {% include "form.html" %}
+                    </form>
+                </div>
+            </div>
         </div>
-    </div>
+    </main>
+    
 </body>
 
 </html>
