--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -27,15 +27,19 @@
 
 
     <main class="flex-grow-1">
-
-        {% if messages %}
-        <ul>
-            {% for category, message in messages %}
-            <li class="{{ category }}">{{ message }}</li>
-            {% endfor %}
-        </ul>
-
-        {% include "form.html" %}
+        {% if message %}
+        {% for category, text in message %}
+        <div class="alert {{ category }}" role="alert">{{ text }}</div>
+        {% endfor %}
+        <div class="row">
+            <div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5">
+                <h1 class="display-3">Анализатор страниц</h1>
+                <p class="lead">Бесплатно проверяйте сайты на SEO-пригодность</p>
+                <form action="/urls " method="post" class="d-flex justify-content-center" required="">
+                    {% include "form.html" %}
+                </form>
+            </div>
+        </div>
 
         {% else %}
         <div class="container-lg mt-3">
