--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -66,7 +66,7 @@
                                 </a>
                             </td>
                             <td>{{ url['created_at'] }}</td>
-                            <td></td>
+                            <td>{{ url['status_code'] }}</td>
                             {% endfor %}
                         </tr>
 
