--- a/page_analyzer/templates/urls_add.html
+++ b/page_analyzer/templates/urls_add.html
@@ -77,7 +77,7 @@
                         {% for check in url_checks %}
                         <tr>
                             <td>{{ check['id'] }}</td>
-                            <td></td>
+                            <td>{{ check['status_code'] }}</td>
                             <td></td>                      
                             <td></td>
                             <td></td>
