--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -27,9 +27,10 @@
 
 
     <main class="flex-grow-1">
+        {% with message = get_flashed_messages(with_categories=true) %}
         {% if message %}
         {% for category, text in message %}
-        <div class="alert {{ category }}" role="alert">{{ text }}</div>
+        <div class="alert alert-{{ category }}" role="alert">{{ text }}</div>
         {% endfor %}
         <div class="row">
             <div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5">
@@ -76,6 +77,7 @@
 
         </div>
         {% endif %}
+        {% endwith %}
     </main>
     <footer class="border-top py-3 mt-5 flex-shrink-0">
         <div class="container-lg">
