--- a/page_analyzer/templates/urls_add.html
+++ b/page_analyzer/templates/urls_add.html
@@ -25,11 +25,13 @@
 
     </header>
 
-    {% if message %}
-    {% for category, text in message %}
-    <div class="alert alert-{{ category }}" role="alert">{{ text }}</div>
-    {% endfor %}
-    {% endif %}
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, text in messages %}
+                <div class="alert alert-{{ category }}" role="alert">{{ text }}</div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
 
 
     <main class="flex-grow-1">
