--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -30,8 +30,12 @@
             {% for category, text in message %}
                 <div class="alert alert-{{ category }}" role="alert">{{ text }}</div>
             {% endfor %}
-    <main class="flex-grow-1">
-
+            {% if errors %}
+                {% for error in errors %}
+                    <div class="alert alert-danger" role="alert">{{ error }}</div>
+                {% endfor %}
+            {% endif %}
+            <main class="flex-grow-1">
         <div class="row">
             <div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5">
                 <h1 class="display-3">Анализатор страниц</h1>
