ref: refactoring add_url func

--- a/page_analyzer/templates/urls_add.html
+++ b/page_analyzer/templates/urls_add.html
@@ -48,11 +48,11 @@
                         </tr>
                         <tr>
                             <td>Имя</td>
-                            <td>{{ name }}</td>
+                            <td>{{ curr_url[0] }}</td>
                         </tr>
                         <tr>
                             <td>Дата создания</td>
-                            <td>{{ created_at }}</td>
+                            <td>{{ curr_url[1] }}</td>
                         </tr>
                     </tbody>
                 </table>
